[workspace]
members = ["bundler", "dino", "dino-macros", "dino-server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
bundler = { path = "./bundler" }
dino-macros = { path = "./dino-macros" }
rquickjs = { version = "0.9.0", features = ["full"] }
rquickjs-macro = "0.9.0"
tracing = "0.1.41"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.138"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yml = "0.0.12"
dino-server = { path = "./dino-server" }
