[package]
name = "dino-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["extra-traits"] }

[dev-dependencies]
rquickjs = { workspace = true }
rquickjs-macro = { workspace = true }
