[package]
name = "dino-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
arc-swap = "1.7.1"
axum = { version = "0.8.1", features = ["http2"] }
matchit = "0.8.4"
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
