[package]
name = "dino-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
arc-swap = "1.7.1"
axum = { version = "0.8.1", features = ["http2"] }
matchit = "0.8.4"
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
indexmap = { version = "2.7.1", features = ["serde"] }
thiserror = "2.0.11"
axum-extra = "0.10.0"
dashmap = "6.1.0"
dino-macros = { workspace = true }
rquickjs = { workspace = true }
rquickjs-macro = { workspace = true }
typed-builder = "0.20.0"
