[package]
name = "dino"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
askama = "0.12.1"
clap = { version = "4.5.29", features = ["derive"] }
git2 = { version = "0.20.0", default-features = false }
enum_dispatch = "0.3.13"
anyhow = { workspace = true }
dialoguer = { version = "0.11.0", features = [
  "completion",
  "fuzzy-matcher",
  "fuzzy-select",
  "history",
] }
blake3 = "1.5.5"
glob = "0.3.2"
bundler = { workspace = true }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true }
dino-server = { workspace = true }
notify = "8.0.0"
tracing = { workspace = true }
notify-debouncer-full = "0.5.0"
tokio-stream = "0.1.17"
